does it tick port

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,30 +8,35 @@ org.gradle.configureondemand=true
 #----------Mod Properties----------#
 #Make sure you edit these before running renameExampleMod!
 mod.version=1.0.0
-mod.license=ARR
+mod.license=LGPLv3
 # Root Folder Path (/java/group/namespace/)
 mod.group=toni
-mod.namespace=examplemod
+mod.namespace=doesittick
 # Mod ID and Main Class Name
-mod.id=example_mod
-mod.name=ExampleMod
+mod.id=does_it_tick
+mod.name=DoesItTick
 # English Display Info
 mod.author=Toni
-mod.github=anthxnymc
-mod.display_name=Example Mod
-mod.description=Yet Another Example Mod
+mod.github=txnimc
+mod.display_name=Does It Tick?
+mod.description=Entity Ticking Performance Mod
 #----------------------------------#
 
 
 #---------Publishing Info----------#
-publish.modrinth=modrinthID
-publish.curseforge=curseforgeID
+publish.modrinth=vmg6jaPW
+publish.curseforge=543308
 #----------------------------------#
 
 
 #----------Dependencies------------#
 deps.minecraft=[VERSIONED]
 deps.fapi=[VERSIONED]
+deps.opac=[VERSIONED]
+deps.ftbchunks=[VERSIONED]
+deps.ftbteams=[VERSIONED]
+deps.ftblib=[VERSIONED]
+deps.architectury=[VERSIONED]
 deps.mixin_squared=0.1.2-beta.4
 deps.mixin_extras=0.3.5
 deps.cond_mixin=0.6.2
