--- a/versions/1.20.1-fabric/gradle.properties
+++ b/versions/1.20.1-fabric/gradle.properties
@@ -8,6 +8,12 @@ deps.yacl=3.5.0+1.20.1-fabric
 deps.fapi=0.91.0+1.20.1
 deps.modmenu=7.0.1
 
+deps.opac=5556894
+deps.ftbchunks=5378089
+deps.ftbteams=5267188
+deps.ftblib=5567590
+deps.architectury=5137936
+
 # Mod
 mod.mc_dep=>=1.20 <=1.20.1
 mod.mc_title=1.20.1
