--- a/versions/1.20.1-forge/gradle.properties
+++ b/versions/1.20.1-forge/gradle.properties
@@ -4,6 +4,12 @@ loom.platform=forge
 deps.yarn_build=10
 deps.yacl=3.5.0+1.20.1-forge
 
+deps.opac=5556895
+deps.ftbchunks=5378090
+deps.ftbteams=5267190
+deps.ftblib=5567591
+deps.architectury=5137938
+
 # Forge
 deps.fml=47.2.16
 deps.forgeconfigapi=none
