--- a/versions/1.21.1-neoforge/gradle.properties
+++ b/versions/1.21.1-neoforge/gradle.properties
@@ -5,6 +5,12 @@ deps.yarn_build=1
 deps.yarn_patch=1.20.5+build.3
 deps.yacl=3.5.0+1.21-neoforge
 
+deps.opac=5556930
+deps.ftbchunks=5631511
+deps.ftbteams=5631446
+deps.ftblib=5634888
+deps.architectury=5553800
+
 # Fabric
 deps.fml=21.1.8
 deps.forgeconfigapi=21.1.0
