--- a/versions/1.21.1-fabric/gradle.properties
+++ b/versions/1.21.1-fabric/gradle.properties
@@ -4,6 +4,12 @@ loom.platform=fabric
 deps.yarn_build=1
 deps.yacl=3.5.0+1.21-fabric
 
+deps.opac=5556921
+deps.ftbchunks=5631510
+deps.ftbteams=5631447
+deps.ftblib=5634887
+deps.architectury=5553799
+
 # Fabric
 deps.fapi=0.102.1+1.21.1
 deps.modmenu=10.0.0-beta.1
